# galaxy-brain

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts
.cursor/: mcp.json
gaps-get-filled/claude-code-opus-4-7-high/N472JW/: .gitignore  README.md  pyproject.toml  requirements.txt
gaps-get-filled/claude-code-opus-4-7-high/N472JW/app/: streamlit_app.py
gaps-get-filled/claude-code-opus-4-7-high/N472JW/config/: default.yaml
gaps-get-filled/claude-code-opus-4-7-high/N472JW/data/cache/: AAPL.parquet  JPM.parquet  MSFT.parquet  NVDA.parquet  SPY.parquet  TSLA.parquet  XOM.parquet
gaps-get-filled/claude-code-opus-4-7-high/N472JW/results/runs/test_7sym/: config.yaml  dashboard.html  equity.parquet  gaps.parquet  summary.json  trades.parquet
gaps-get-filled/claude-code-opus-4-7-high/N472JW/scripts/: build_dashboard.py  fetch_data.py  run_gap_fill.py
gaps-get-filled/claude-code-opus-4-7-high/N472JW/src/n472jw/: __init__.py  backtest.py  config.py  data.py  gaps.py  metrics.py  strategy.py
gaps-get-filled/claude-code-opus-4-7-high/N472JW/src/n472jw/strategies/: __init__.py  gap_fill.py
gaps-get-filled/claude-code-opus-4-7-high/N472JW/tests/: test_gaps.py
gaps-get-filled/codex-gpt-4-5-xhigh/: README.md  pyproject.toml
gaps-get-filled/codex-gpt-4-5-xhigh/results/runs/sp500_10y_strict/: config.json  summary.json
gaps-get-filled/codex-gpt-4-5-xhigh/src/closing_bell/: cli.py  presentation.py
gaps-get-filled/codex-gpt-4-5-xhigh/tests/: test_gaps.py
gaps-get-filled/cursor-composer-2/: .gitignore  README.md  pyproject.toml
gaps-get-filled/cursor-composer-2/results/sp500_10y_default/: run.json
gaps-get-filled/cursor-composer-2/src/gapfill_sandbox/: __init__.py  cli.py  data.py  engine.py  present.py  strategies.py  universe.py
gaps-get-filled/cursor-gpt-5-4/gpt-5-4-backtesting/: .gitignore  README.md  pyproject.toml
gaps-get-filled/cursor-gpt-5-4/gpt-5-4-backtesting/results/sp500-10y/presentation/: by_symbol.csv  summary.json
gaps-get-filled/cursor-gpt-5-4/gpt-5-4-backtesting/src/gpt_5_4_backtesting/: __init__.py  __main__.py  cli.py  data.py  engine.py  grid_search.py  models.py  reporting.py  universes.py
gaps-get-filled/cursor-gpt-5-4/gpt-5-4-backtesting/src/gpt_5_4_backtesting/strategies/: __init__.py  base.py  gap_fill.py
gaps-get-filled/cursor-gpt-5-4/gpt-5-4-backtesting/tests/: test_gap_fill.py  test_grid_search.py
(+113 files in other folders)
