[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "closing-bell"
version = "0.1.0"
description = "Gap-fill folklore backtesting sandbox and HTML case-maker"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "yfinance>=0.2.54",
    "plotly>=5.24",
    "lxml>=5.2",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[project.scripts]
closing-bell = "closing_bell.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
